# AuditAI

./: .gitignore  README.md  pyproject.toml
auditai/: __init__.py  artifacts.py  attribution.py  candidates.py  cli.py  codeql.py  contracts.py  gates.py  judge.py  judge_engines.py  pipeline.py  report.py  run.py  scope.py  security_controls.py
auditai/codeql/: source_validation.json
auditai/kb/: __init__.py  loader.py
docs/: 01-direction-review.md  02-architecture.md  03-blueprint.md  04-hybrid-candidate-discovery.md  05-p0-blockers.md  06-mvp-full-pipeline.md  CODEX_HISTORY.md  CODEX_VERIFICATION_QUEUE.md  README.md  efficacy-report.md
docs/.codex-ctx/: artifacts_s3.py.txt  cli_head.py.txt  cli_stage.py.txt  contracts_judgerun.py.txt  run.py.txt
docs/codex-prompts/: run-verdict-c-qa.md
eval_targets/: eval_config.json
eval_targets/owasp_sourced/: README.md  code_execution.py  command_injection.py  path_traversal.py  sql_injection.py  ssrf.py  unsafe_deserialization.py
eval_targets/phoenix_smoke/: README.md
eval_targets/python_ghsa_patch_diffs/: README.md
eval_targets/python_known_cves/: README.md
eval_targets/synthetic_python/: README.md  code_execution.py  command_injection.py  guard_removal_after.py  path_traversal.py  (+11 more)
tests/: conftest.py  test_artifacts.py  test_attribution.py  test_candidates.py  test_cli.py  test_codeql.py  test_contracts.py  test_framework_fixtures.py  test_gates.py  test_judge.py  test_judge_engines.py  test_kb.py  test_p0_contracts.py  test_pipeline.py  test_report.py  test_run.py  test_scope.py  test_security_controls.py
(+93 files in other folders)
